[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "repo_helper_github_interactive"
version = "0.0.0"
description = "Interactive session for 'repo_helper_github'."
readme = "README.rst"
keywords = [ "github", "repo-helper",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/repo_helper_github_interactive"
"Issue Tracker" = "https://github.com/repo-helper/repo_helper_github_interactive/issues"
"Source Code" = "https://github.com/repo-helper/repo_helper_github_interactive"

[tool.mkrecipe]
conda-channels = [ "repo-helper",]
extras = "all"
license-key = "MIT"

[tool.importcheck]

[project.entry-points."repo_helper.command"]
repo_helper_github_interactive = "repo_helper_github_interactive.cli:github"
