[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "repo_helper_github_interactive"
version = "0.0.0"
description = "Interactive session for 'repo_helper_github'."
readme = "README.rst"
keywords = [ "github", "repo-helper",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/repo_helper_github_interactive"
"Issue Tracker" = "https://github.com/repo-helper/repo_helper_github_interactive/issues"
"Source Code" = "https://github.com/repo-helper/repo_helper_github_interactive"

[tool.importcheck]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"

[project.entry-points."repo_helper.command"]
repo_helper_github_interactive = "repo_helper_github_interactive.cli:github"
