[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "repo_helper_github_interactive"
version = "0.0.0"
description = "Interactive session for 'repo_helper_github'."
readme = "README.rst"
keywords = [ "github", "repo-helper",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/repo-helper/repo_helper_github_interactive"
"Issue Tracker" = "https://github.com/repo-helper/repo_helper_github_interactive/issues"
"Source Code" = "https://github.com/repo-helper/repo_helper_github_interactive"

[project.entry-points."repo_helper.command"]
repo_helper_github_interactive = "repo_helper_github_interactive.cli:github"

[tool.importcheck]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
python-versions = [ "3.7", "3.8", "3.9", "3.10",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10
